package com.poo.T6_UsoAvanzado_ClasesObjetos.B_Clases_Abstractas.B_Practica_1;

/**
 * Clase principal para ejecutar la aplicación llamando a la clase static tienda donde se gestiona su funcionalidad.
 * @autor Iván Fuster Simarro
 * @version 1.0 (18/02/2025)
 */
public class AppEcommerce {

    public static void main(String[] args) {

        Tienda.iniciarPago();
    }
}