@startuml

class AppEcommerce {
    +main(String[] args)
}

abstract class MetodoPago {
    # abstract void procesarPago(double importe)
}

class Tienda {
    - static Scanner TECLADO
    # static void iniciarPago()
    # static void realizarPago(MetodoPago metodo, double importe)
}

class TarjetaCredito extends MetodoPago {
    - String numTarjeta
    - String tipo
    - static ArrayList<String> tiposTarjetas
    + TarjetaCredito()
    # boolean validarTarjeta()
    # procesarPago(double importe)
}

class Bizum extends MetodoPago {
    - Random aleatorio
    - String telefono
    - int pin
    + Bizum()
    + int generarPin()
    + void mostrarPin()
    + boolean validarPin(int pinRecibido)
    + boolean validarTelefono()
    # boolean validarBizum(int pinValido)
    # procesarPago(double importe)
}

class PayPal extends MetodoPago {
    - static Scanner TECLADO
    - static String FORMATO_CORREO
    - String cuenta
    - double saldo
    + PayPal()
    + boolean cuentaCorrecta()
    + void ingresarSaldo(double ingreso)
    + void mensajeIngresoSaldo()
    # void validarPaypal(double importe)
    # procesarPago(double importe)
}

AppEcommerce --> Tienda : "Usa"
Tienda --> MetodoPago : "Gestiona"

MetodoPago -[hidden]-> TarjetaCredito
MetodoPago -[hidden]-> Bizum
MetodoPago -[hidden]-> PayPal

@enduml